# ChangeLog for media-video/ffmpeg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.701 2014/01/14 19:26:17 aballier Exp $

*ffmpeg-2.1.2 (14 Jan 2014)

  14 Jan 2014; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.1.2.ebuild:
  version bump

  14 Jan 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  Add some more cpu features useflags for x86, mips and arm.

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.8.ebuild:
  Stable for ppc, wrt bug #492252

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.8.ebuild:
  Stable for ppc64, wrt bug #492252

  10 Dec 2013; Lars Wendler <polynomial-c@gentoo.org> ffmpeg-0.10.10.ebuild,
  ffmpeg-1.0.8.ebuild, ffmpeg-1.2.4.ebuild, ffmpeg-2.0.2.ebuild,
  ffmpeg-2.1.1.ebuild, +files/ffmpeg-0.10.10-freetype251.patch,
  +files/ffmpeg-1.0.8-freetype251.patch, +files/ffmpeg-1.2.4-freetype251.patch,
  +files/ffmpeg-2.0.2-freetype251.patch:
  Fixed compilation with >=media-libs/freetype-2.5.1 (bug #493596).

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> ffmpeg-1.0.8.ebuild:
  x86 stable, bug #492252

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> ffmpeg-1.0.8.ebuild:
  amd64 stable, bug #492252

  06 Dec 2013; Markus Meier <maekke@gentoo.org> ffmpeg-1.0.8.ebuild:
  arm stable, bug #492252

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> ffmpeg-1.0.8.ebuild:
  Stable for HPPA (bug #492252).

*ffmpeg-2.1.1 (22 Nov 2013)

  22 Nov 2013; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.1.1.ebuild:
  version bump

*ffmpeg-0.10.10 (14 Nov 2013)

  14 Nov 2013; Alexis Ballier <aballier@gentoo.org> +ffmpeg-0.10.10.ebuild:
  version bump for the 0.10 slot

*ffmpeg-2.1 (05 Nov 2013)

  05 Nov 2013; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.1.ebuild:
  version bump

  05 Nov 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  add avx2 useflag
