@@ -21,7 +21,7 @@ DIST ffmpeg-2.1.tar.bz2 6640774 SHA256 926603fd974e9b38071a5cfc6fd0d93857801d196
 EBUILD ffmpeg-0.10.10.ebuild 9688 SHA256 9b558b48ece44c0bd24b0940439cd371e359b0f25004668a7a690696e631db32 SHA512 36297d05c87f3c104765e44d96c2a4fae00c26a8e637f3baab9169234fb3fe5bc97eef36af1d69c4dcb18b086afb2db528708c544e1c5f17a1b1121580c5aa2c WHIRLPOOL e025d23cdcb7dbc8e386ed74ec8ccfef232d24007c6f969d73515bcfd06c1420b0057eb551e2036a3d72bbd2f8b830be18a2d982540ebfcb18c3c594a59343c9
 EBUILD ffmpeg-0.10.9.ebuild 9628 SHA256 1ae7fe6e3d8cfff291dd06abbde97523225a04d69fa5634d999a233b0d65184a SHA512 282212ba8a13e6eaf8676f0a6b08f506ed5a183f050abcd30fef30f301248368a51dac89d5185332a25b4c59400b125467f8b277cbf58f3ea5d0e9e0f79bf5dc WHIRLPOOL f8602667c35525b7339cd3df4610e444ff762a13081bca9977b4728d8a8d6084a873eb7c170bc5e99a3d993ad5f1108306e40d94fc1d21b9e181b538823493c2
 EBUILD ffmpeg-1.0.7.ebuild 9602 SHA256 8043939761a0f81f9a69e5d70cb3a017445849f455a4e4ce9d36cfd2a032687c SHA512 23690d129f2b1a64de04309b3f9eadbfc6d4de696d0cd126d085812f434088977f31dfdf31f3da5453e1f7da6e83ecd4ae0e122db7701152c0d7bb12059ab9e8 WHIRLPOOL cadda4f937286bcedf83e61d7d1227c8e9b963922535cc284c4b9f6c3633b907be4eb68027bddbc87244ecf340f86af8ea9526688a731495f96d97f6dc71a7d2
-EBUILD ffmpeg-1.0.8.ebuild 9652 SHA256 e31ea078c8b307de46460d150da9ad3f56e1cee1e3b0f7d4561f6b0ef9f6627c SHA512 77924db0dc74c9964fa9ff767b8d03b69415565bcdec7690e2c4285a034c0addc9eb36a8baa4909c54c65d74d91139f398726f3258f606e9e46edfb09e9ce606 WHIRLPOOL 63505b6087c6d3bb71df1b9c1579cfb6f0a23bdc4ab62ada8371beada1a6bb1587bffccc2ec80025bf760b7d792982d6215b9076963e10d35056297e23646ba2
+EBUILD ffmpeg-1.0.8.ebuild 9652 SHA256 a8b76798650c4e3912e381b5e84ab9aed66ee6b6213705b6c2643c0458daca9c SHA512 f3e85834f28c4240805e69134707f78282d242a87183c0debba7d6b566f8573b0e7ed397ae7b0b8a10ef9f9dba7e24a4dd494e17dc9fb4ca2dc86b5cb495e9e4 WHIRLPOOL 4d01e4f108e99ac10cca83eea8a5d7be49dd2dca05f2cad6fb8f946e75ebf910c1da80d2339856c282d8e9ec1616f78cab5f2b90f9f7311afc1b87ea117c2fe6
 EBUILD ffmpeg-1.2.3.ebuild 8938 SHA256 c93bdb73ebf4c2fc20f047983e3532cecd533918218196777de3e730f6cc0db8 SHA512 87c906c60da0302d4f3c5731995ec3a399d1c2b12ed571d2979d8cedfec8ebd561750da16449d76a684fdd1b883eeba7e782c3859148da8c9286acaa4cd33cbe WHIRLPOOL cb3f2b83ae6f849db0c7344cfb79f64fc06ff87f9dd7ea39f3352b8337ade1a16dde5b404a194c8e4185b8fb6b20f4128a80b19bb579a21503bcce423bfc35a4
 EBUILD ffmpeg-1.2.4.ebuild 8995 SHA256 470de6c8c403d844e876d4fa3d4b41225931176eaf4b14ec44db784ada42e250 SHA512 9e3966f60881134384faa97588aaf3588d2b5450d47401c30af1cadc2da54d4cb7f2ed4c6d041ac80933c0966cbf7047754362b28cb41883ddf79bb30ad09873 WHIRLPOOL 1deaaed0a61741c233339e47a7fddd602dedda00be4d442ef56d98965ae4946ce0ee655eef58c0fe1e4aa9690c9e15ed89a2b846e198e23f0e69379abf846164
 EBUILD ffmpeg-2.0.2.ebuild 9814 SHA256 e87d2e765d731e2db9e83186eb002d52b645972d54b5044d4feb1312707d046e SHA512 a1ffd624912b33dfb9545d55fa401d74798d3320ba71171423e70994a475c954654cac97e393ea60aaf248a2fa88bd9f3577770c643241e9f9976fd464e152f9 WHIRLPOOL 4a57bfb9c8d5381ddb40cd30836ce38017ff94096317f1c968a4b3f18e2b6df2392e3550381a1f8468738bce830f38e4f35d9f48f7571d62bca16b2803ea7398
@@ -29,12 +29,22 @@ EBUILD ffmpeg-2.1.1.ebuild 10115 SHA256 80bd673d4564818edc757d17482bb0b18c8d5794
 EBUILD ffmpeg-2.1.2.ebuild 10240 SHA256 9cc7e31daf6df0f360ac67c0625489ef889e293dec8bcfd39b3d4a0e8a1db535 SHA512 c3223f61b7703653a5508e12d02c6e5697714abd5d6c0d61fc481d7f66251e1c78656d12abb72d06aa8f1a1b0a934170b98cf1df4dd9f8862a2a8e0daf6f228e WHIRLPOOL ecdf7ca9fb9b56105412c0267fdf2ce301f88380675eefc6e2349ada2614d7274cb0e8b3a4d0645fa9866c08494f0a1f6d80d235822ecff68bcde03a069810ee
 EBUILD ffmpeg-2.1.ebuild 9922 SHA256 ada45fb54f06e6be078dde8594d51a83fab8a58b5be5154c75e33aaccde8085b SHA512 fcae83cfd6f6a102fd573818d1e55f47a194a248218124e2f121f7866611bbf082be7bed44cfef29beee675a980b83fd76af6832901b2d6b8cfa6fdbe52d23ad WHIRLPOOL 2d70f8fd5cee37691d15e9f0fa87a30455e5d0459acce9a5489e3a1467cd5eb6646610dacd7f5a73515de73ff76719160abead0ea920e33c5c4be972e6df1402
 EBUILD ffmpeg-9999.ebuild 10241 SHA256 106a0829b277b20aafe3fc3ce1641be5de8115cd6b51c9cbb3367cd5f5c5b8da SHA512 1bc41a81002a5a0c6a7edf4cd7701e630d24017c4ec68ac2bbe350e58fb2e2bb1ae52f3be9532ef82b8ddb01983a0d88873029a378dcbf28020429df407b7d9b WHIRLPOOL d17f07f3267ca26eafd7949d9ca3702ac55dd6d1e4c009a3802024e3a5e24cce1b70f2baa94c977e04cba27d986a1d907763f327f400305dc153cd23a836f05e
-MISC ChangeLog 97919 SHA256 b51913ac6516980e604408a684cfeac04b42fc7e87c628f11e6d51faa7ae9fd2 SHA512 77b20075e7a94344253a08341e920af151a3a8547c82ee393e3cb20d26f588fea8a5d876e4eddc15b9483aa75fe4bc164430cdfaff9c1a12216883410df91127 WHIRLPOOL 3c056f268b081b1eca4105134390afbea5779bce51c362d9ac14c5d10c84c4afd03b6e6606f2a9e923aa342a0ac6621b5a215417a066bcd9694fa8e00fac4962
+MISC ChangeLog 98020 SHA256 4b468f543dee7e236a61a73b56d1141d66ab735dfe790d19c2050e2232e8f6d6 SHA512 5b82a36b5a1d2b2ab3bf616a3cb76c64ee5023fd443feeb19fee2adcf56a90f440d952be683cf4f2803b1b98daa3a8cd5f2cfad0470237f9b77a42000194ead2 WHIRLPOOL b598910305c7711967cae2b735976cdc37365515b3c58708ad5cc69dbf6377bf2388d1f960133c0631fc9dde49702abfc93be1876f8278a13756b62ac3d7eb23
 MISC metadata.xml 5023 SHA256 99bbcb090ad6c7f40d1a19c14d5f31beb67023664b5e70d53e976ff6ccb03114 SHA512 8c067e95750c3868fb3dd987d66e4e9b3e6c17bce33dba3bba80d96d49fb293ae25faac505cb575ee00cfcd4c912e47831dca559aef06b4f921a34762b750169 WHIRLPOOL 4b05d43fd76ee436db935b681a21c9e267c6ab169314ae30e5b20c87386b37dde3694cf3a26910394607b0458cc974f35c79bb640c889b4ac6b07cfbb8b2c627
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLVj1oACgkQvFcC4BYPU0osWQCgvoXs3ru0CNAIBq6NFighThbB
-T6IAoIdqrV/un/0qheAg0Cf9wvB5BN3b
-=Shb2
+iQIcBAEBCAAGBQJS1lwsAAoJELp701BxlEWfn24QAJqqMWfA81QcITK12Bw1pgiQ
+jGivfpzI7l+5JzTeYrrqK2np4SNRKYK1YakORXTsRPB/x+TGRxWurct9N8KuiKxO
+DKYK8pNPV+YCjDaEmkxdE/Zi8q0RQQwf050AYbBGtFNzQ1ZLEh+nX+ZHgC3Py31X
+tcBOFGFwtrdp7i5wgZRYmwJ7h4cxLzS+fwzuMkds4SbtIDYJdNwztTE7paRHy+pb
+Z9Bt+WIlcVvMc9WNirRq6lC+P3HwUGJZYVRxZSG50Ke8v4eadGDexsOdUgd10O/j
+OBvqhP+TBxtaS1tySf9eKpoueOibAgNyf5OpQ2+jo9EnFgjwIBU0TGqDhj4mUn/a
+lauKg545px5FmiN2kao2Dc2p+VJme6199qldwdyE/RaHPppGRNDsL1YcEVuaoZHK
+ia2qfjHEMYpXozWWpOjeR23F8eq2ZRU1w8pCjcKUzoaPkY3mAAmm0CyO6Z1QXb+M
+/MankwwpXOo5QwwKAGabliQ/eGFK+UaYAIrxUeQfbwjTrCumXDmCF7Svu9x/7rtR
+2wsP1OpSwQpHN9EfFxPCby5DGVfKfNzKbcCM3j+GmQL8mMiPTCqVgm95vqpLBcW5
+IYhbTBcpk31Er7m0HNpGfGsPO62ciebic84QByMcckWsXzjuFXYDutbw24dHSYOZ
+KrtSoJXE5yAi+7Jby0Up
+=kW5K
 -----END PGP SIGNATURE-----
